Fixed horizontal scroll

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,16 +1,18 @@
 @mixin footer-common {
   background-color: $color-white;
   height: 110px;
-  width: 100vw;
+  width: 100%;
   display: flex;
   align-items: center;
   flex-direction: column;
   border-top: solid 1px $color-white-two;
+
   @media all and (min-width: 768px) {
     height: 60px;
     flex-direction: row;
     justify-content: space-between;
   }
+
   &__paragraph {
     color: $color-brownish-grey;
     opacity: 0.5;
@@ -18,14 +20,17 @@
     font-size: 14px;
     text-align: center;
     margin-top: 18px;
+
     @media all and (min-width: 768px) {
       margin: 18px 0px 22px 41px;
     }
   }
+
   &__img {
     width: 103px;
     height: 40px;
     margin: 12px 0px 20px 0px;
+
     @media all and (min-width: 768px) {
       margin: 10px 41px 10px 0px;
     }
